Fix infinite loop when changing premises on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,21 +2,21 @@
     font-family: "MGS2";
     font-style: normal;
     font-weight: normal;
-    src: url("MGS2.ttf") format("ttf");
+    src: url("/fonts/MGS2.ttf") format("ttf");
 }
 
 @font-face {
     font-family: "Espionage";
     font-style: normal;
     font-weight: normal;
-    src: url("Espionage.woff") format("woff");
+    src: url("/fonts/Espionage.woff") format("woff");
 }
 
 @font-face {
     font-family: "Metal Gear";
     font-style: normal;
     font-weight: normal;
-    src: url("Metal Gear.woff") format("woff");
+    src: url("/fonts/Metal Gear.woff") format("woff");
 }
 
 ::-webkit-scrollbar {
@@ -104,7 +104,7 @@ button:not(:disabled):hover {
 /* end of Utils */
 
 .feedback {
-    background-image: url(img/noize_bg_black.png);
+    background-image: url(/img/noize_bg_black.png);
     border: 8px solid;
     border-left: none;
     border-right: none;
@@ -201,7 +201,7 @@ button:not(:disabled):hover {
     width: 100%;
     height: 100%;
     background-color: #000c;
-    background-image: url(img/snake-background.jpg);
+    background-image: url(/img/snake-background.jpg);
     background-size: cover;
     background-position: center;
     filter: brightness(0.15);
